Changed folder structure

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Signup Page</title>
-    <link rel="stylesheet" href="../static/registration.css"> <!-- Connects to the CSS -->
+    <link rel="stylesheet" href="../static/css/registration.css"> <!-- Connects to the CSS -->
 </head>
 <body>
 <div class="container">
@@ -34,6 +34,6 @@
     </div>
 </div>
 
-<script src="../static/registration.js"></script> <!-- Connects to JavaScript -->
+<script src="../static/js/registration.js"></script> <!-- Connects to JavaScript -->
 </body>
 </html>
