--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,20 +8,19 @@
 </head>
 <body>
     <div class="chat-container">
-<div class="ai-chat-box">
-    <img src="../static/assets/chatbot ziva logo.png" alt="ziva logo" id="aiImage" width="10%">
-    <div class="ai-chat-area">
-   Hello sir! How Can I Help you Today?
-    </div>
-   
-</div>
+        <div class="ai-chat-box">
+            <img src="../static/assets/chatbot ziva logo.png" alt="ziva logo" id="aiImage" width="10%">
+            <div class="ai-chat-area">
+                Hello sir! How Can I Help you Today?
+            </div>
+        </div>
     </div>
     <div class="prompt-area">
-<input type="text" id="prompt" placeholder="Message...">
-<button id="image"><img src="" alt=""> 
-<input type="file" accept="images/*" hidden></button>
-<button id="submit"><img src="" alt=""></button>
+        <input type="text" id="prompt" placeholder="Message...">
+        <button id="image"><img src="" alt="">
+        <input type="file" accept="images/*" hidden></button>
+        <button id="submit"><img src="../static/assets/send icon.png" alt=""></button>
     </div>
-  <script src="../static/js/index.js"></script>  
+    <script src="../static/js/index.js"></script>
 </body>
 </html>
