--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIVA</title>
     <link rel="stylesheet" href="../static/css/index.css">
+    <!-- Favicons -->
+  <link href="../static/assets/ziva for favicon.png" rel="icon">
 </head>
 <body>
+   
     <div class="chat-container">
         <div class="ai-chat-box">
-            <img src="../static/assets/chatbot ziva logo.png" alt="ziva logo" id="aiImage" width="10%">
+            <img src="../static/assets/ziva main logo.png" alt="ziva logo" id="aiImage" width="5%">
             <div class="ai-chat-area">
                 Hello sir! How Can I Help you Today?
             </div>
@@ -17,7 +20,7 @@
     </div>
     <div class="prompt-area">
         <input type="text" id="prompt" placeholder="Message...">
-        <button id="image"><img src="" alt="">
+        <button id="image"><img src="../static/assets/final icon.png" alt="">
         <input type="file" accept="images/*" hidden></button>
         <button id="submit"><img src="../static/assets/send icon.png" alt=""></button>
     </div>
