--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZIVA</title>
+    <title>ZIVA-Talk to the Future</title>
     <link rel="stylesheet" href="../static/css/index.css">
     <!-- Favicons -->
   <link href="../static/assets/ziva for favicon.png" rel="icon">
 </head>
 <body>
+
+    
    
     <div class="chat-container">
         <div class="ai-chat-box">
@@ -19,10 +21,10 @@
         </div>
     </div>
     <div class="prompt-area">
-        <input type="text" id="prompt" placeholder="Message...">
-        <button id="image"><img src="../static/assets/final icon.png" alt="">
+        <input type="text" id="prompt" placeholder="Tell me!...">
+        <button id="image"><img src="../static/assets/final icon.png" alt="Image icon">
         <input type="file" accept="images/*" hidden></button>
-        <button id="submit"><img src="../static/assets/send icon.png" alt=""></button>
+        <button id="submit"><img src="../static/assets/send icon.png" alt="send button icon"></button>
     </div>
     <script src="../static/js/index.js"></script>
 </body>
