--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,8 +10,8 @@ body{
 }
 .chat-container{
     width: 100%;
-    height: 80%;
-    background-color: #f36686; /* Updated background color */
+    height: 65%;
+    background-color: #ffadad; /* Updated background color */
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -48,10 +48,10 @@ body{
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.361);
     position: relative;
-    left:10%;
+    left:9%;
     color:#434044
     border-radius: 0px 40px 40px 40px;
-    box-shadow: 2px 2px 10px black;
+    /* box-shadow: 2px 2px 10px black; */
 }
 #userImage{
     position: absolute;
@@ -67,7 +67,7 @@ filter:drop-shadow( 2px 2px 10px black);
 .prompt-area{
     width: 100%;
     height: 30%;
-    background-color: #f36686;
+    background-color: #ffadad;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,7 +75,7 @@ filter:drop-shadow( 2px 2px 10px black);
 }
 .prompt-area input{
     width: 40%;
-    height: 80px;
+    height: 70px;
     background-color: #183a68;
     outline: none;
     border:none;
