--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,23 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIVA-ask to the future</title>
     <link rel="stylesheet" href="../static/css/index.css">
-    <link rel="icon" href="../static/assets/chatbot_ziva_Logo__1_.png" type="image/png">
+    <link rel="icon" href="../static/assets/ziva dp.png" type="image/png">
 </head>
 <body>
-    <header>
-        <div class="my-account">
-            <a href="#" id="account-link">My Account</a>
-            <div class="dropdown">
-                <a href="#">Profile</a>
-                <a href="#">Settings</a>
-                <a href="#">Logout</a>
-            </div>
-        </div>
-    </header>
-    
     <div class="chat-container">
         <div class="ai-chat-box">
-            <img src="../static/assets/logo.final.png" alt="ziva logo" id="aiImage" width="10%">
+            <img src="../static/assets/ziva chatbox.png" alt="ziva logo" id="aiImage" width="10%">
             <div class="ai-chat-area">
                 Hello sir! How Can I Help you Today?
             </div>
